<resources>
    <string name="app_name">Kuku App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Home</string>
    <string name="second_fragment_label">Farmer\'s Corner</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="breed_name">Exotic Dual Purpose (Original Kienyeji)</string>
    <string name="feeding_instruction">They are cheap to raise since thy are natural scavengers</string>
    <string name="housing_label">Housing:</string>
    <string name="housing_text">Housing : Individual birds need more room for normal behavior and adequate exercise than the 22 birds/m2 density currently used in commercial laying cages.</string>
    <string name="health_text_label">Health: Disease diagnosis</string>
    <string name="health_text">Health Symptoms: Bone and leg deformation and feather loss. The birds walk with difficulty; they limp. Some deficiencies may cause feather loss. Treatment, if detected in time: Supplementary vitamins and calcium, fresh grass, and cow dung. Nutritional diseases may be avoided when the birds have access to normal vegetation and are therefore rare in scavenging chickens.</string>
    <string name="chicken_image">chicken image</string>
    <string name="fab_label">Add Chicken to cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_view_fragment_label">Traders\' Joint</string>
</resources>