<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/parent_linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/chicken_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:id="@+id/nameAndFeedingViews"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/breed_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/breed_name" />

                <TextView
                    android:id="@+id/feeding_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:text="@string/feeding_instruction" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/housing_text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/housing_label" />

        <TextView
            android:id="@+id/housing_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/housing_text" />

        <TextView
            android:id="@+id/health_text_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/health_text_label" />

        <TextView
            android:id="@+id/health_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/health_text" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>