<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.greenscore.kukuapp.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_web_view_fragment"
            app:destination="@id/web_view_fragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.greenscore.kukuapp.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
    <fragment
        android:id="@+id/web_view_fragment"
        android:name="com.greenscore.kukuapp.WebViewFragment"
        android:label="@string/web_view_fragment_label"
        tools:layout="@layout/fragment_web_view">

        <action
            android:id="@+id/action_web_view_fragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>
</navigation>